Add material ui

--- a/開発日誌.md
+++ b/開発日誌.md
@@ -1,2 +1,9 @@
 2022/02/07
 firebase を入れた
+
+2022/02/08
+event.preventDefault();　止める
+material ui を　yarn add
+最新のドキュメントに従って実行すること
+import { Input, FormControl, InputLabel, Button } from "@mui/material"; でまとめた
+
