--- a/開発日誌.md
+++ b/開発日誌.md
@@ -7,3 +7,4 @@ material ui を　yarn add
 最新のドキュメントに従って実行すること
 import { Input, FormControl, InputLabel, Button } from "@mui/material"; でまとめた
 Todo コンポーネントを作成
+Todo コンポーネントに List, ListItem, ListItemText を追加
