firebase.js を移動

--- a/開発日誌.md
+++ b/開発日誌.md
@@ -8,3 +8,5 @@ material ui を　yarn add
 import { Input, FormControl, InputLabel, Button } from "@mui/material"; でまとめた
 Todo コンポーネントを作成
 Todo コンポーネントに List, ListItem, ListItemText を追加
+Todo css を追加
+firebase.js を移動
