query(collection(db, "todos"), orderBy("timestamp", "desc")), でソート

--- a/開発日誌.md
+++ b/開発日誌.md
@@ -11,3 +11,4 @@ Todo コンポーネントに List, ListItem, ListItemText を追加
 Todo css を追加
 firebase.js を移動
 DB から取得
+query(collection(db, "todos"), orderBy("timestamp", "desc")), でソート
