投稿を削除

--- a/開発日誌.md
+++ b/開発日誌.md
@@ -13,4 +13,5 @@ firebase.js を移動
 DB から取得
 query(collection(db, "todos"), orderBy("timestamp", "desc")), でソート
 デプロイ
-
+Objects are not valid as a React child (found: object with keys {id, todo, timestamp}). If you meant to render a collection of children, use an array instead.
+投稿を削除
