deploy のスクリプト追加

--- a/開発日誌.md
+++ b/開発日誌.md
@@ -15,3 +15,5 @@ query(collection(db, "todos"), orderBy("timestamp", "desc")), でソート
 デプロイ
 Objects are not valid as a React child (found: object with keys {id, todo, timestamp}). If you meant to render a collection of children, use an array instead.
 投稿を削除
+npm install @mui/icons-material
+deploy のスクリプト追加
