--- a/開発日誌.md
+++ b/開発日誌.md
@@ -17,3 +17,5 @@ Objects are not valid as a React child (found: object with keys {id, todo, times
 投稿を削除
 npm install @mui/icons-material
 deploy のスクリプト追加
+Modal
+v5 になっててリファクタリングに手間取った．theme.なんとかみたいなのを変えた．
