プロトタイプ完成

--- a/開発日誌.md
+++ b/開発日誌.md
@@ -21,3 +21,5 @@ Modal
 v5 になっててリファクタリングに手間取った．theme.なんとかみたいなのを変えた．
 改造している
 books.map が機能していない
+useState("") がだめだった． useState([]) でないと
+DB にスプレッドシートからインポート
