--- a/開発日誌.md
+++ b/開発日誌.md
@@ -24,3 +24,6 @@ books.map が機能していない
 useState("") がだめだった． useState([]) でないと
 DB にスプレッドシートからインポート
 無限スクロールを実装する．読み込みが遅いので．
+
+2022/02/09
+ユーザ登録機能，タイトルごとに表示する機能，ソート機能
